# zmanim-docs

./: .gitignore  README.md  pyproject.toml  versions.json  zensical.toml
2.5/: 404.html  index.html  search.json  sitemap.xml
2.5/alos/: index.html
2.5/astronomical_dawn/: index.html
2.5/astronomical_twilight/: index.html
2.5/bein_hashmashos/: index.html
2.5/candle_lighting/: index.html
2.5/end_burning_chometz/: index.html
2.5/end_eating_chometz/: index.html
2.5/end_shema/: index.html
2.5/end_tefilla/: index.html
2.5/kidush_levana/: index.html
2.5/midday/: index.html
2.5/midnight/: index.html
2.5/mincha_gedola/: index.html
2.5/mincha_ketana/: index.html
2.5/mishayakir/: index.html
2.5/plag_mincha/: index.html
2.5/sunrise/: index.html
2.5/sunset/: index.html
2.5/tzais/: index.html
2.5/tzais_geonim/: index.html
docs/: alos.md  astronomical_dawn.md  astronomical_twilight.md  bein_hashmashos.md  candle_lighting.md  end_burning_chometz.md  end_eating_chometz.md  end_shema.md  end_tefilla.md  index.md  kidush_levana.md  midday.md  midnight.md  mincha_gedola.md  mincha_ketana.md  mishayakir.md  plag_mincha.md  sunrise.md  sunset.md  tzais.md  tzais_geonim.md
latest/: 404.html  index.html  search.json  sitemap.xml
latest/alos/: index.html
latest/astronomical_dawn/: index.html
latest/astronomical_twilight/: index.html
latest/bein_hashmashos/: index.html
latest/candle_lighting/: index.html
latest/tzais/: index.html
tools/: docs_common.py  generate-docs.py  generate-json.py  generate-md.py  parse-javadoc.py  zman_categories.py
(+15 files in other folders)
