[project]
name = "site"
version = "0.1.0"
description = "User facing documentation for the various KosherJava Zmanim"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mike",
    "openai>=2.38.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
]

[dependency-groups]
dev = ["zensical>=0.0.43"]

[tool.uv.sources]
mike = { git = "https://github.com/squidfunk/mike.git" }
